# acnh_util

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  download.sh  get_examples.sh  migrate.py  out.sh  package.json  seed.py
docs/: acnh.js  index.html  index.js  initial_data.json  service-worker.js  style.css
elm/: Main.elm
public/: acnh.js  index.html  style.css
src/: data.rs  main.rs
