[package]
name = "acnh_util"
version = "0.1.0"
authors = ["Robert Masen <robert.masen@smartthings.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2"
tokio = { version = "0.2", features = ["macros", "blocking"] }
rusqlite = { version = "0.23", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
lazy_static = "1.4"
pretty_env_logger = "0.4"
